<resources>
    <string name="app_name">android ui practice kotlin</string>
    <string name="KotlinPractice">Android Kotlin Practice</string>
    <string name="title_activity_google_maps">GoogleMaps</string>
    <string name="viewgroupimage">this is viewgroup in Android</string>
    <string name="intents">Intents</string>
    <string name="text_view_and_edit_text">Text View and Edit text</string>
    <string name="explicit_intent">Explicit intent</string>
    <string name="google_implicit_intent">Google Implicit intent</string>
    <string name="jetpackCompose">Android Jetpack Compose</string>
    <string name="data_binding">Data Binding</string>
    <string name="view_model">View Model</string>
    <string name="live_data">Live Data + ViewModel</string>
    <string name="mvvm_and_room">MVVM and Room</string>
    <string name="depenedency_injection">Depenedency Injection</string>
    <string name="apis">APIs</string>
    <string name="databases">Databases</string>
    <string name="jetpackcompose">JetpackCompose</string>
    <string name="kotlin_coroutines">Kotlin Coroutines</string>
    <string name="material_ui_designs">Material and UI designs</string>
    <string name="api_designs">API Designs</string>
    <string name="retrofit">Retrofit</string>
    <string name="volley">Volley</string>
    <string name="mysql">MYSQL</string>
    <string name="ktor">Ktor</string>
    <string name="json_parsing">JSON Parsing</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="nzd">NZD</string>
    <string name="share_app">Share App</string>
    <string name="share_whatsapp">share whatsapp</string>
    <string name="firebase">Firebase</string>
    <string name="mango_db">MANGO DB</string>
    <string name="Login">Log in</string>
    <string name="SignIn">Sign In</string>
    <string name="goToFirebaseAuth">Firebase Authentication</string>
    <string name="btn_signout">Sign out</string>
    <string name="btnlogin">Log in</string>
    <string name="firebaselogintxt">Firebase Login</string>
    <string name="emailenterhint">Enter your email here</string>
    <string name="passwordhint">Enter your password here</string>
    <string name="skills">enter your skills</string>
    <string name="degreeedittxt">enter your degree</string>
    <string name="submitFirebaseUserdata">Submit Data</string>
    <string name="Firebaseuserdatatxtheadline">Firebase User data</string>
    <string name="userskillstxt">User Skills</string>
    <string name="userdegreetxt">User degree</string>
    <string name="currentuseremail">current user email</string>
    <string name="edtskillshint">enter your skills</string>
    <string name="signoutbtn">sign out</string>
    <string name="updateuserdata">update data</string>
    <string name="edtskills">enter your skills</string>
    <string name="firebase_app">FIREBASE APP</string>
    <string name="firebase_analytics">Firebase Analytics</string>
    <string name="firebase_in_app_messaging">Firebase in App Messaging</string>
    <string name="firebase_crash_analytics">Firebase Crash Analytics</string>
    <string name="firebase_cloud_messaging">Firebase Cloud Messaging</string>
    <string name="google_maps">Google Maps</string>
    <string name="android_ui_widgets">Android UI widgets</string>
    <string name="button_in_android_ui">Button in Android UI</string>
    <string name="submit_radio_buttons">Submit Radio Buttons</string>
    <string name="submit_checkboxes">Submit Checkboxes</string>
    <string name="submit_rating_bar">submit Rating Bar</string>
    <string name="checked_textview">Checked TextView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragments">Fragments</string>
    <string name="replacesecondfragment">Replace second fragment</string>
    <string name="animations">Animations</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrian">Terrian</string>
    <string name="none">None</string>
    <string name="notifications">Notifications</string>
    <string name="aws">AWS</string>
    <string name="android_security">Android Security</string>
    <string name="android_ui_components">Android UI Widgets</string>
    <string name="artificial_intelligence">Artificial Intelligence</string>
    <string name="internet_of_things_iot">Internet of Things (IOT)</string>
    <string name="kotlin_practice_by_rohit">KOTLIN PRACTICE BY ROHIT</string>
    <string name="splashdescription">This app is for kotlin practice</string>
    <string name="android_system_components">Android System Components</string>
    <string name="androidsyscomponentsheadliine">Android System Components</string>
    <string name="camera">Camera</string>
    <string name="wifi_off">WIFI OFF</string>
    <string name="wifi_on">WIFI ON</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="bluetooth_on">Bluetooth ON</string>
    <string name="gallary">Gallary</string>
    <string name="files">Files</string>
    <string name="messages">Messages</string>
    <string name="calls_history">Calls History</string>
    <string name="browser">Browser</string>
    <string name="recordings"> Start Recording</string>
    <string name="dial_phone">Dial Phone</string>
    <string name="torch_off">Torch OFF</string>
    <string name="my_current_phone_info">My Current Phone Info</string>
    <string name="airplane_mode">Airplane Mode OFF</string>
    <string name="clipboard">Clipboard</string>
    <string name="splashscreenbottomtext">Depicted my practice for Android system</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="android_types_of_notifications">Android Types of Notifications</string>
    <string name="default_notification">Default Notification</string>
    <string name="high_notification">High Notification</string>
    <string name="low_notification">Low Notification</string>
    <string name="action_notification">Action Notification</string>
    <string name="content_intent_notification">Content Intent Notification</string>
    <string name="on_going_notification">On Going Notification</string>
    <string name="custom_sound_notification">Custom sound notification</string>
    <string name="big_style_text_notification">Big Style Text Notification</string>
    <string name="inbox_style_notification">Inbox Style Notification</string>
    <string name="big_picture_style_notification">Big picture style notification</string>
    <string name="download_style_notification">Download Style Notification</string>
    <string name="messaging_style_notification">Messaging Style Notification</string>
    <string name="media_style_notification">Media Style Notification</string>
    <string name="this_is_a_cardview">This is a CardView</string>
    <string name="default_notification_channel_id">dn15</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="code_snippet">
        // code for bluetooth toggle button
        fun toggleBluetooth() {
            val bluetoothAdapter = BluetoothAdapter.getDefaultAdapter()
            if (bluetoothAdapter == null) {
                // Device does not support Bluetooth
                Toast.makeText(this, "Bluetooth not supported", Toast.LENGTH_SHORT).show()
                return
            }

            if (bluetoothAdapter.isEnabled) {
                bluetoothAdapter.disable()
                binding.BluetoothONOFFBtn.text = getString(R.string.bluetooth_off)
            } else {
                // Request Bluetooth permissions if not granted
                if (ContextCompat.checkSelfPermission(this, Manifest.permission.BLUETOOTH_ADMIN) != PackageManager.PERMISSION_GRANTED) {
                    ActivityCompat.requestPermissions(this, arrayOf(Manifest.permission.BLUETOOTH_ADMIN), BLUETOOTH_PERMISSION_REQUEST_CODE)
                    return
                }

                bluetoothAdapter.enable()
                binding.BluetoothONOFFBtn.text = getString(R.string.bluetooth_on)
            }
        }
    </string>
    <string name="api_integration">API Integration</string>
    <string name="enter_your_github_username">enter your github username</string>
    <string name="github">Github</string>
    <string name="github_user">Github user</string>
    <string name="github_email">Github Email</string>
    <string name="custom_style_notificaiton">Custom Style Notificaiton</string>
    <string name="firebase_crash_analytics_head">Firebase Crash Analytics</string>
    <string name="crash_me_btn_head">Crash Me</string>
    <string name="crash_the_app">Crash the App</string>
    <string name="index_out_of_bounds_btn">Index Out Of Bounds</string>
    <string name="arithmetic_exception_crash">Arithmetic Exception Crash</string>
    <string name="stack_overflow_error">Stack overflow error</string>
    <string name="array_store_exception">Array store exception</string>
    <string name="class_class_exception">Class cast exception</string>
    <string name="illegal_argument_exception">Illegal argument exception</string>
    <string name="firebase_analytics_app">Firebase Analytics</string>
    <string name="admob_with_firebase">Admob with Firebase</string>
    <string name="sqlite_db">SQLite DB</string>
    <string name="expandable_list_view">Expandable List View</string>
    <string name="tab_layouts">Tab layouts</string>
    <string name="bottom_nav_bar_tabs">Bottom Nav bar Tabs</string>
    <string name="aws_db">AWS DB</string>
    <string name="aws_login">AWS Login</string>
    <string name="aws_signup">AWS SignUp</string>
    <string name="aws_db_headline">AWS DB</string>
    <string name="firebase_auth_options">Firebase Auth Options</string>
    <string name="with_email_and_password">With Email and Password</string>
    <string name="with_phone_number">With Phone Number</string>
    <string name="with_google_sign_in">Google Sign In</string>
    <string name="facebook_sign_in">Facebook Sign in</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_email">Reset email</string>
    <string name="architecture_patterns">Architecture patterns</string>
    <string name="mvc_pattern">MVC Pattern</string>
    <string name="mvp_pattern">MVP Pattern</string>
    <string name="mvvm_room">MVVM + Room</string>
    <string name="mvvm_retrofit">MVVM + Retrofit</string>
    <string name="simple_view_model">Simple View Model</string>
    <string name="viewmodel_livedata_databinding">ViewModel + LiveData + DataBinding</string>
    <string name="activity_fragment_lifecycle">Activity + Fragment Lifecycle</string>
    <string name="navigation_architecture_component">Navigation Architecture Component</string>
    <string name="recycleview_fundamentals">RecycleView Fundamentals</string>
    <string name="room_data_persistance_library">Room Data Persistance Library</string>
    <string name="retrofit_with_kotlin_coroutine">Retrofit With Kotlin Coroutine</string>
    <string name="dependency_injection_with_dagger">Dependency Injection with Dagger</string>
    <string name="kotlin_fundamentals">Kotlin Fundamentals</string>
    <string name="kotlin_dsa_and_fundamentals">Kotlin DSA And Fundamentals</string>
    <string name="kotlin_dsa">Kotlin DSA</string>
    <string name="shared_preference">Shared Preference</string>
    <string name="mysql_app">MYSQL APP</string>
    <string name="mysql_sing_up">MYSQL sing up</string>
    <string name="mysql_login">MYSQL Login</string>
    <string name="mysql_password_reset">MYSQL Password reset</string>
    <string name="trigger_push_notification">Trigger Push Notification</string>
    <string name="speech_to_text_and_text_to_speech">Speech to Text and Text to Speech</string>
</resources>