<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".JetpackCompose.JetpackCompose"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/HeadlineTextViewStyle"
                android:text="@string/jetpackCompose"
               />

            <Button
                android:id="@+id/kotlinCoroutinesBtn"
                style="?attr/buttonStyle"
                android:text="@string/kotlin_coroutines"
                />


            <Button
                android:text="@string/simple_view_model"
                style="?attr/buttonStyle"
                android:id="@+id/simpleViewModelBtn"/>

            <Button
                android:id="@+id/LiveDataBtn"
                style="?attr/buttonStyle"
                android:text="@string/live_data"
                />

            <Button
                android:id="@+id/viewModelLiveDataDataBindingBtn"
                style="?attr/buttonStyle"
                android:text="@string/viewmodel_livedata_databinding"
                />

            <Button
                android:id="@+id/ActivityFragmentLifecycleBtn"
                style="?attr/buttonStyle"
                android:text="@string/activity_fragment_lifecycle" />

            <Button
                android:id="@+id/NavigationArchitectureComponentBtn"
                style="?attr/buttonStyle"
                android:text="@string/navigation_architecture_component"

           />

            <Button
                android:id="@+id/dependencyInjectionWithDagger"
                style="?attr/buttonStyle"
                android:text="@string/dependency_injection_with_dagger"
                />

            <Button
                android:id="@+id/recycleViewFuncdamentalsbtn"
                style="?attr/buttonStyle"
                android:text="@string/recycleview_fundamentals"
                />

            <Button
                android:id="@+id/roomDataPersistanceLibrarybtn"
                style="?attr/buttonStyle"
                android:text="@string/room_data_persistance_library"
                />

            <Button
                android:id="@+id/retrofitWithKotlinCoroutinebtn"
                style="?attr/buttonStyle"
                android:text="@string/retrofit_with_kotlin_coroutine"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

</layout>