<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:id="@+id/scrollview"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/amaranth"
            android:text="@string/KotlinPractice"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uicomponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/material_ui_designs" />

        <Button
            android:id="@+id/AdvanceUIComponets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_ui_components"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <Button
            android:id="@+id/AndroidSystemComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_system_components"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp" />


        <Button
            android:id="@+id/AritificalIntelligence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artificial_intelligence"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/IOTandThings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_of_things_iot"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/GotoMachineLearning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/machine_learning"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />


    <Button
        android:id="@+id/Kotlincoroutines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kotlin_coroutines"
        android:backgroundTintMode="add"
        android:fontFamily="@font/amaranth"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/JetpackCompose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jetpackcompose"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <Button
            android:id="@+id/APisbtn"
            android:onClick="goToAPi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            app:cornerRadius="10dp"
            android:text="@string/apis" />

        <Button
            android:id="@+id/databases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/databases"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
           />

        <Button
            android:id="@+id/googlemaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_maps"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            />

        <Button
            android:id="@+id/fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragments"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            />

        <Button
            android:id="@+id/GotoAnimations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:fontFamily="@font/amaranth"
            android:text="@string/animations"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/GotoNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            />

        <Button
            android:id="@+id/GotoArchitecturePatterns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/architecture_patterns"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            />

        <Button
            android:id="@+id/GoToAndroidSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_security"
            android:backgroundTintMode="add"
            app:cornerRadius="10dp"
            android:fontFamily="@font/amaranth"
            />


    </LinearLayout>
</ScrollView>
</LinearLayout>
</layout>