<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_height="match_parent"
    tools:context=".Databases">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/databaseshead"
                style="@style/HeadlineTextViewStyle"
                android:text="@string/databases"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/FirebaseBTN"
                style="?attr/buttonStyle"
                android:onClick="goToFirebase"
                android:text="@string/firebase" />

            <Button
                android:id="@+id/MYSQLBtn"
                style="?attr/buttonStyle"
                android:text="@string/mysql"
                android:onClick="goToMYSQLDB"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <Button
                android:id="@+id/MangoDBBtn"
                style="?attr/buttonStyle"
                android:text="@string/mango_db"
                app:layout_constraintTop_toBottomOf="@+id/button" />


            <Button
                android:id="@+id/SQLiteBtn"
                style="?attr/buttonStyle"
                android:text="@string/sqlite_db"
                android:onClick="goToSQLITE"
              />


            <Button
                android:id="@+id/GotoAWSDBBtn"
                style="?attr/buttonStyle"
                android:text="@string/aws_db"
                android:onClick="goToAWSDB"
             />


            <Button
                android:id="@+id/SharePrefBtn"
                style="?attr/buttonStyle"
                android:text="@string/shared_preference"
                android:onClick="goToSharePref"
              />




        </LinearLayout>
    </ScrollView>
</LinearLayout>