<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AchitecturePatterns.ArchitecturePatternsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/architecture_patterns"
            android:textSize="20sp"
            android:textStyle="bold"

            android:layout_marginBottom="20dp"
           android:gravity="center_horizontal"
            />

        <Button
            android:layout_width="match_parent"
            android:text="@string/mvvm_room"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_width="match_parent"
            app:cornerRadius="10dp"
            android:text="@string/mvvm_retrofit"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:text="@string/mvp_pattern"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:text="@string/mvc_pattern"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</layout>