<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Firebase.Firebase">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/firebasehedaliine"
            style="@style/HeadlineTextViewStyle"
            android:text="@string/firebase_app"
            android:textSize="30sp"
        />



    <Button
        android:id="@+id/goToFirebaseAuth"
        style="?attr/buttonStyle"
        android:text="@string/goToFirebaseAuth"
       />



        <Button
            android:id="@+id/buttonFirebaseAnalticsApp"
            style="?attr/buttonStyle"
            android:text="@string/firebase_analytics_app"
            />


    <Button
        android:id="@+id/buttonFirebaseCloudMessaging"
        android:text="@string/firebase_in_app_messaging"
        app:cornerRadius="10dp"
        style="?attr/buttonStyle"
        />


        <Button
            android:id="@+id/buttonCrashanalytics"
            style="?attr/buttonStyle"
            android:text="@string/firebase_crash_analytics"
            app:cornerRadius="10dp"
            />

        <Button
            android:id="@+id/buttonInappMessaging"
            style="?attr/buttonStyle"
            android:text="@string/firebase_cloud_messaging"
            />



        <Button
            android:id="@+id/buttonAdmobwithFirebase"
            android:text="@string/admob_with_firebase"
            style="?attr/buttonStyle"
            />

        <Button
            android:id="@+id/buttonDynamicLink"
            android:text="Dynamic Link with Firebase"
            style="?attr/buttonStyle"
            />


        <TextView
            android:id="@+id/fireTextView"
           android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
           />

        <TextView
            android:id="@+id/firestoretext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            />


    </LinearLayout>
</ScrollView>